feat: define mpc node callback api
