# api/protobuf/api.pb.gw.go
@@ -76,6 +76,32 @@ func local_request_NotifyService_TransactionNotify_0(ctx context.Context, marsha
 
 }
 
+func request_MpcCheckService_MpcCheck_0(ctx context.Context, marshaler runtime.Marshaler, client MpcCheckServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq vo.MpcCheckRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.MpcCheck(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_MpcCheckService_MpcCheck_0(ctx context.Context, marshaler runtime.Marshaler, server MpcCheckServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq vo.MpcCheckRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.MpcCheck(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterHelloServiceHandlerServer registers the http handlers for service HelloService to "mux".
 // UnaryRPC     :call HelloServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -138,6 +164,40 @@ func RegisterNotifyServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 		}
 
 		forward_NotifyService_TransactionNotify_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+// RegisterMpcCheckServiceHandlerServer registers the http handlers for service MpcCheckService to "mux".
+// UnaryRPC     :call MpcCheckServiceServer directly.
+// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterMpcCheckServiceHandlerFromEndpoint instead.
+func RegisterMpcCheckServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server MpcCheckServiceServer) error {
+
+	mux.Handle("POST", pattern_MpcCheckService_MpcCheck_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/api.protobuf.MpcCheckService/MpcCheck", runtime.WithHTTPPathPattern("/v1/check"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MpcCheckService_MpcCheck_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_MpcCheckService_MpcCheck_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -284,4 +344,75 @@ var (
 
 var (
 	forward_NotifyService_TransactionNotify_0 = runtime.ForwardResponseMessage
+)
+
+// RegisterMpcCheckServiceHandlerFromEndpoint is same as RegisterMpcCheckServiceHandler but
+// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
+func RegisterMpcCheckServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+	conn, err := grpc.DialContext(ctx, endpoint, opts...)
+	if err != nil {
+		return err
+	}
+	defer func() {
+		if err != nil {
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+			return
+		}
+		go func() {
+			<-ctx.Done()
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+		}()
+	}()
+
+	return RegisterMpcCheckServiceHandler(ctx, mux, conn)
+}
+
+// RegisterMpcCheckServiceHandler registers the http handlers for service MpcCheckService to "mux".
+// The handlers forward requests to the grpc endpoint over "conn".
+func RegisterMpcCheckServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterMpcCheckServiceHandlerClient(ctx, mux, NewMpcCheckServiceClient(conn))
+}
+
+// RegisterMpcCheckServiceHandlerClient registers the http handlers for service MpcCheckService
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "MpcCheckServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "MpcCheckServiceClient"
+// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
+// "MpcCheckServiceClient" to call the correct interceptors.
+func RegisterMpcCheckServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client MpcCheckServiceClient) error {
+
+	mux.Handle("POST", pattern_MpcCheckService_MpcCheck_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/api.protobuf.MpcCheckService/MpcCheck", runtime.WithHTTPPathPattern("/v1/check"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MpcCheckService_MpcCheck_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_MpcCheckService_MpcCheck_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+var (
+	pattern_MpcCheckService_MpcCheck_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "check"}, ""))
+)
+
+var (
+	forward_MpcCheckService_MpcCheck_0 = runtime.ForwardResponseMessage
 )
